# ai-server

./: .gitignore  Dockerfile  pyproject.toml
src/: config.py  consumer.py  main.py
src/ai_server/: consumer.py  main.py
src/ai_server/graphs/: chatbot_graph.py  instant_graph.py  trip_graph.py
src/ai_server/models/: chatbot.py
src/ai_server/prompts/: trip.py
src/ai_server/services/: places.py
src/graphs/: chatbot_graph.py  instant_graph.py  trip_graph.py
src/models/: instant.py  trip.py
src/prompts/: instant.py
src/services/: places.py
