[project]
name = "ai-server"
version = "0.1.0"
description = "Trippy FastAPI LangGraph AI Server"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aio-pika>=9.5",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-deepseek>=0.1",
    "langgraph>=0.4",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "pytz>=2024.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
